--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   </head>
   <body style="margin: 0;">
     <div class="header">
+      <div class="ucd-logo">
+        <img src="./ucd-logo.png" />
+      </div>
+      <div class="header__info">
+        <h2 class="header__heading">Data Visualisation Project</h2>
+        <div class="header__sub-heading">BIBDA M2</div>
+        <div class="header__name">By Othmane Tayab</div>
+      </div>
       <div class="btns">
         <button id="line">Line</button>
         <button id="rect">Rectangle</button>
         <button id="circle">Circle</button>
         <button id="clock">Clock</button>
         <button id="erase">Erase</button>
+        <div class="current-shape">Current Shape: line</div>
       </div>
     </div>
     <canvas id="canvas" style="border: 1px solid green;"></canvas>
